--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.application.name=ecom-backend
 spring.datasource.url=jdbc:h2:mem:learn
 spring.datasource.driverClassName=org.h2.Driver
 spring.h2.console.enabled=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.defer-datasource-initialization=true
 
