--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
 spring.application.name=ecom-backend
 
-spring.datasource.url=jdbc:h2:mem:learn
-spring.datasource.driverClassName=org.h2.Driver
-spring.h2.console.enabled=true
+# spring.datasource.url=jdbc:h2:mem:learn
+# spring.datasource.driverClassName=org.h2.Driver
+# spring.h2.console.enabled=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecom_db
+spring.datasource.username=postgres
+spring.datasource.password=0000
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+
 
 spring.jpa.defer-datasource-initialization=true
 
